--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -137,6 +137,14 @@ IF (PROTOBUF_FOUND)
     ${PROTOBUF_LIBRARY})
 ENDIF (PROTOBUF_FOUND)
 
+IF (CUDA_FOUND)
+  SET(CERES_LIBRARY_DEPENDENCIES
+    ${CERES_LIBRARY_DEPENDENCIES}
+    ${CUDA_LIBRARIES}
+    ${CUDA_CUBLAS_LIBRARIES}
+    ${CUDA_cusparse_LIBRARY})
+ENDIF (CUDA_FOUND)
+
 TARGET_LINK_LIBRARIES(ceres ${CERES_LIBRARY_DEPENDENCIES})
 
 IF (BUILD_TESTING)
