Rought initial version of cusparse based cuda conjugate gradients solver.

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -44,6 +44,7 @@ SET(CERES_INTERNAL_SRC
     conditioned_cost_function.cc
     conjugate_gradients_solver.cc
     corrector.cc
+    cusparse_conjugate_gradients_solver.cc
     dense_qr_solver.cc
     dense_sparse_matrix.cc
     detect_structure.cc
